# Kakuro

./: .gitignore  CMakeLists.txt
include/: GamePage.h  GridWidget.h  HelpPage.h  MainWindow.h  StartPage.h
include/Game/: Board.h  Controller.h  Generator.h
resources/: style.qss
src/: GamePage.cpp  GridWidget.cpp  HelpPage.cpp  MainWindow.cpp  StartPage.cpp  main.cpp
src/Game/: Board.cpp  Controller.cpp  Generator.cpp
